@@ -10,6 +10,7 @@ Changes for Perl Application Development and Refactoring Environment
     - Refactored "Help Search" to use document help providers. This will make it
       faster (AZAWAWI)
     - Help Search looks up words selected or under the cursor (AZAWAWI)
+    - allow the use of $main->open_file_dialog($dir) (SZABGAB)
     - Moved Ecliptic's Quick Fix to Padre core under the Edit menu (AZAWAWI)
 
 0.43 2009.08.16
